<resources>
    <string name="app_name">LineMemo</string>
    <string name="empty_text"> </string>
    <!-- Memo Titles-->
    <string name="all_text_memo_list_title">메모 리스트</string>
    <string name="all_text_memo_insert_title">메모 등록</string>
    <string name="all_text_memo_read_title">메모 수정</string>
    <string name="all_text_memo_remove_title">메모 삭제</string>
    <!-- Memo List-->
    <string name="memo_title_empty">제목 없음</string>
    <string name="memo_content_empty">내용 없음</string>
    <!-- Make Memo-->
    <string name="make_memo_title_hint">제목</string>
    <string name="make_memo_content_hint">내용</string>
    <string name="thumbnail_selection_title">사진 선택</string>

    <string name="all_save_text">저장</string>
    <string name="all_remove_text">삭제</string>
    <string name="all_text_not_permission">해당 기능을 사용하시려면, 퍼미션 권한이 필요합니다.</string>
    <string name="all_selection_text">전체 선택</string>
    <string name="all_mount_text">%d개</string>
    <string name="all_text_want_delete">삭제하시겠습니까?</string>
    <string name="all_text_yes">네</string>
    <string name="all_text_no">아니오</string>
    <string name="all_text_delete_confirm">네를 누르면 삭제됩니다.</string>
    <string name="all_text_take_picture">사진 촬영</string>
    <string name="all_text_selection_gallery">갤러리 선택</string>
    <string name="all_text_insert_link">링크 삽입</string>
    <string name="all_text_empty_message">메모를 추가하면 여기에 나타납니다.</string>
    <string name="all_text_insert_link_hint">이미지 주소를 입력해주세요.</string>


</resources>
