<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="memoItem"
            type="hbs.com.linememo.domain.model.MemoItem" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:title="@string/all_text_memo_read_title"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_memo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="#ffffff"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/transparent_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_memo_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={memoItem.title}"
                android:textSize="@dimen/material_text_headline2"
                android:textColor="@color/black_color"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:hint="@string/make_memo_title_hint" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:boxBackgroundColor="#ffffff"
            app:boxStrokeWidth="0dp"
            app:boxStrokeColor="@color/transparent_color"
            app:layout_constraintBottom_toTopOf="@id/rv_memo_gallery"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_memo_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_memo_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@={memoItem.content}"
                android:gravity="top|start"
                android:textColor="@color/black_color"
                android:focusableInTouchMode="false"
                android:focusable="false"
                android:hint="@string/make_memo_content_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_memo_gallery"
            android:layout_width="match_parent"
            android:layout_height="@dimen/todo_gallery_size"
            tools:itemCount="10"
            tools:listitem="@layout/item_memo_gallery"
            app:layout_constraintBottom_toTopOf="@id/layout_bottom_bar" />

        <include
            android:id="@+id/layout_bottom_bar"
            layout="@layout/layout_bottom_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
