<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/image_selection_bottom_dialog_height"
    android:background="@color/white_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_selection_camera"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_selection_camera_icon"
            android:layout_width="@dimen/selection_icon_size"
            android:layout_height="@dimen/selection_icon_size"
            android:src="@drawable/ic_camera_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_selection_camera_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/all_text_take_picture"
            android:textSize="@dimen/material_text_body1"
            app:layout_constraintBottom_toBottomOf="@id/iv_selection_camera_icon"
            app:layout_constraintLeft_toRightOf="@id/iv_selection_camera_icon"
            app:layout_constraintTop_toTopOf="@id/iv_selection_camera_icon" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_selection_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_selection_gallery_icon"
            android:layout_width="@dimen/selection_icon_size"
            android:layout_height="@dimen/selection_icon_size"
            android:src="@drawable/ic_image_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_selection_gallery_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/all_text_selection_gallery"
            android:textSize="@dimen/material_text_body1"
            app:layout_constraintBottom_toBottomOf="@id/iv_selection_camera_icon"
            app:layout_constraintLeft_toRightOf="@id/iv_selection_camera_icon"
            app:layout_constraintTop_toTopOf="@id/iv_selection_camera_icon" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_selection_link"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/iv_selection_link_icon"
            android:layout_width="@dimen/selection_icon_size"
            android:layout_height="@dimen/selection_icon_size"
            android:src="@drawable/ic_link_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_selection_link_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/all_text_insert_link"
            android:textSize="@dimen/material_text_body1"
            app:layout_constraintBottom_toBottomOf="@id/iv_selection_camera_icon"
            app:layout_constraintLeft_toRightOf="@id/iv_selection_camera_icon"
            app:layout_constraintTop_toTopOf="@id/iv_selection_camera_icon" />
    </LinearLayout>
</LinearLayout>